Add test for idempotency